DataFit Iteration Punta Arenas + Santiago

--- a/DataFit/SEIRHVD5_PuntaArenas_Datafit.ipynb
+++ b/DataFit/SEIRHVD5_PuntaArenas_Datafit.ipynb
@@ -14,17 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linux\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -71,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First simulation Initial date\n",
     "initdate = datetime(2020,5,15)\n",
     "# Date for change in SeroPrevalence\n",
-    "SPchange_date = datetime(2020,8,14)\n",
+    "SPchange_date = datetime(2020,7,25)\n",
     "\n",
     "# Current date\n",
     "currentdate = datetime.now()\n",
@@ -100,34 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing General Data\n",
-      "Importing Population\n",
-      "Importing Active infected\n",
-      "Importing Accumulated Infected\n",
-      "Importing Daily Infected\n",
-      "Importing Sochimi Data 2\n",
-      "Importing Accumulated Deaths\n",
-      "Importing Active Infected by Minciencia\n",
-      "Importing Hospitalized/NonHospitalized Deaths\n",
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tstate = '13'\n",
+    "tstate = '12'\n",
     "\n",
     "# Import Data\n",
-    "RM = ImportData(tstate=tstate,initdate = initdate)\n",
-    "RM.importdata()"
+    "PA = ImportData(tstate=tstate,initdate = initdate)\n",
+    "PA.importdata()\n",
+    "\n",
+    "RM = PA"
    ]
   },
   {
@@ -139,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Total simulation time\n",
     "tsim = 1000\n",
     "t_sp = (SPchange_date - initdate).days\n",
-    "beta = 0.12\n",
-    "mu = 1.6\n",
+    "beta = 0.075\n",
+    "mu = 0.3\n",
     "k_I = 0\n",
     "k_R = 0\n",
-    "SeroPrevFactor =0.07\n",
+    "SeroPrevFactor =0.2\n",
     "expinfection=0 # Proportion in which the exposed infect - 0: nothing, 1: equally as Infected"
    ]
   },
@@ -187,13 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Quarantines \n",
-    "max_mob = 0.85\n",
-    "rem_mob = 0.45\n",
+    "max_mob = 0.6\n",
+    "rem_mob = 0.35\n",
     "\n",
     "Q1 = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=t_sp)\n",
     "Q2 = Quarantine(rem_mob)\n",
@@ -219,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "Imi_det = 1\n",
-    "Ias_det = 0.1\n",
+    "Ias_det = 0.3\n",
     "Ise_det = 1\n",
     "Icr_det = 1"
    ]
@@ -293,19 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#state parameters: \n",
-    "pE_Ias = 0.428 # Transition from exposed to Asymptomatic Infected\n",
+    "pE_Ias = 0.433 # Transition from exposed to Asymptomatic Infected\n",
     "tE_Ias = 4.0\n",
-    "pE_Imi = 0.528 # Transition from exposed to  Mild Infected\n",
+    "pE_Imi = 0.55 # Transition from exposed to  Mild Infected\n",
     "tE_Imi = 4.0\n",
-    "pE_Icr = 0.012 # Transition from exposed to  Critical Infected\n",
+    "pE_Icr = 0.005 # Transition from exposed to  Critical Infected\n",
     "tE_Icr = 3.0\n",
-    "pE_Ise = 0.032# Transition from exposed to  Serious Infected\n",
+    "pE_Ise = 0.002# Transition from exposed to  Serious Infected\n",
     "tE_Ise = 3.0\n",
+    "\n",
+    "\n",
     "pIas_R = 1.0   # Transition from Asymptomatic Infected to Recovered\n",
     "tIas_R = 9.0\n",
     "pImi_R = 1.0  # Transition from Mild Infected to Recovered\n",
@@ -346,12 +325,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### First Susceptibles increase 2020-08-24"
+    "### First Susceptibles increase 2020-08-24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,14 +342,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "increasedays = (fiestaspatrias - SPchange_date).days + 0\n",
-    "renewalFactor = 0.23\n",
+    "renewalFactor = 0.6\n",
     "dailyincrease = RM.population*SeroPrevFactor*renewalFactor/increasedays\n",
-    "chi0 = SeroPrevDynamics(t_sp+5,t_sp+increasedays*0.7,t_sp+increasedays,dailyincrease,form='line')\n",
+    "t_sp_temp = t_sp + 0\n",
+    "chi0 = SeroPrevDynamics(t_sp_temp,t_sp_temp+increasedays*0.01,t_sp_temp+increasedays,dailyincrease,form='quadratic')\n",
     "#chi0 = SeroPrevDynamics(t_sp,t_sp+increasedays*1,t_sp+increasedays,dailyincrease,'quadratic',df = 1)\n",
     "chi = [chi0]\n",
     "#renewalFactor = [renewalFactor]"
@@ -378,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "renewalFactor = [0.15,0.3,0.45,0.6,0.75]"
+    "renewalFactor = np.array([0.0,0.3,0.45,0.6,1.5])/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,29 +379,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chi = [chisum(chi0,SeroPrevDynamics(fiestaspatrias_day-4,fiestaspatrias_day+increasedays*0.0001,fiestaspatrias_day+increasedays,i)) for i in dailyincrease]"
+    "chi = [chisum(chi0,SeroPrevDynamics(fiestaspatrias_day-10,fiestaspatrias_day+increasedays*0.50001,fiestaspatrias_day+increasedays,i)) for i in dailyincrease]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f79aec21640>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chiplot = [[chi[i](t) for t in np.arange(0,tsim,0.1)] for i in range(len(renewalFactor))]\n",
     "plt.title('Sero Prevalence Dynamics')\n",
@@ -446,41 +415,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2020, 5, 15, 0, 0)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RM.I_ac_r_dates[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulation = [SEIRHVD(tsim,beta,mu,alpha,k_I=k_I,k_R = k_R, chi = i, SeroPrevFactor=SeroPrevFactor,expinfection=expinfection,RealIC = RM,Imi_det = Imi_det,Ias_det = Ias_det) for i in chi]"
    ]
@@ -494,21 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(len(simulation)):\n",
     "    simulation[i].pE_Ias=pE_Ias\n",
@@ -584,11 +518,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    3.0s\n",
-      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    3.0s remaining:    4.5s\n",
-      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    3.9s remaining:    2.6s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.4s remaining:    0.0s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.4s finished\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    3.1s remaining:    4.6s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    3.3s remaining:    2.2s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    3.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    3.7s finished\n",
       "ready\n"
      ]
     }
@@ -669,17 +603,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "plt.xlim(initdate,datetime(2020,12,31))\n",
+    "plt.scatter(RM.Br_dates,RM.Br,label='Muertes Hospitalizados')\n",
+    "plt.scatter(RM.hosp_dates,RM.Br_hosp,label='Muertes Hospitalizados')\n",
+    "plt.scatter(RM.hosp_dates,RM.Br_Nonhosp,color = 'red',label='Muertes No Hospitalizados')\n",
+    "plt.axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "plt.axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "plt.axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "plt.legend(loc=0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f79ca9a3ac0>"
+       "<matplotlib.legend.Legend at 0x7f9010cb88e0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +641,8 @@
     "axs[0,0].set_title('Accumulated Infected')\n",
     "axs[0,0].set_xlim(initdate,datetime(2020,12,31))\n",
     "axs[0,0].scatter(RM.I_ac_r_dates,RM.I_ac_r)\n",
-    "axs[0,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "#axs[0,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[0,0].axvline(x = datetime(2020,8,22), linestyle = 'dotted',color = 'grey',label='Inicio Cuarentena')\n",
     "axs[0,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[0,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
     "#axs[0,0].plot([], [], ' ', label='SeroPrevalence: '+str(round(100*SeroPrevalence[i],2))+'%')\n",
@@ -705,23 +655,38 @@
     "\n",
     "for i in range(len(simulation)):\n",
     "    axs[0,1].plot(dates[i],simulation[i].B,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
-    "axs[0,1].set_title('Hospitalized Accumulated Deaths')\n",
+    "axs[0,1].set_title('Accumulated Deaths')\n",
     "axs[0,1].set_xlim(initdate,datetime(2020,12,31))\n",
-    "axs[0,1].scatter(RM.hosp_dates,RM.Br_hosp,label='Muertes Hospitalizados')\n",
-    "axs[0,1].scatter(RM.hosp_dates,RM.Br_Nonhosp,color = 'red',label='Muertes No Hospitalizados')\n",
-    "axs[0,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[0,1].scatter(RM.Br_dates,RM.Br,label='Muertes Totales')\n",
+    "#axs[0,1].scatter(RM.hosp_dates,RM.Br_hosp,label='Muertes Hospitalizados')\n",
+    "#axs[0,1].scatter(RM.hosp_dates,RM.Br_Nonhosp,label='Muertes No Hospitalizados')\n",
+    "#axs[0,1].scatter(RM.hosp_dates,RM.Br_Nonhosp,color = 'red',label='Muertes No Hospitalizados')\n",
+    "axs[0,1].axvline(x = datetime(2020,8,22), linestyle = 'dotted',color = 'grey',label='Inicio Cuarentena')\n",
+    "#axs[0,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
     "axs[0,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[0,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
     "axs[0,1].legend(loc=0)\n",
     "\n",
     "\n",
+    "#for i in range(len(simulation)):    \n",
+    "#    axs[1,0].plot(dates[i],simulation[i].Hse+simulation[i].Hout,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
+    "#axs[1,0].set_title('UTI Usage')\n",
+    "#axs[1,0].set_xlim(initdate,datetime(2020,12,31))\n",
+    "#axs[1,0].scatter(RM.sochimi_dates,RM.UTI)\n",
+    "#axs[1,0].plot(dates[0],simulation[0].H_cap,label='UTI Capacity', linestyle = 'dashed', color = 'grey')\n",
+    "#axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "#axs[1,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "#axs[1,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "#axs[1,0].legend(loc=0)\n",
+    "\n",
     "for i in range(len(simulation)):    \n",
-    "    axs[1,0].plot(dates[i],simulation[i].Hse+simulation[i].Hout,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
-    "axs[1,0].set_title('UTI Usage')\n",
+    "    axs[1,0].plot(dates[i],simulation[i].I_d_det,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
+    "axs[1,0].set_title('New Daily Infected')\n",
     "axs[1,0].set_xlim(initdate,datetime(2020,12,31))\n",
-    "axs[1,0].scatter(RM.sochimi_dates,RM.UTI)\n",
-    "axs[1,0].plot(dates[0],simulation[0].H_cap,label='UTI Capacity', linestyle = 'dashed', color = 'grey')\n",
-    "axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[1,0].scatter(RM.I_d_r_dates,RM.I_d_r)\n",
+    "\n",
+    "#axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[1,0].axvline(x = datetime(2020,8,22), linestyle = 'dotted',color = 'grey',label='Inicio Cuarentena')\n",
     "axs[1,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[1,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
     "axs[1,0].legend(loc=0)\n",
@@ -729,14 +694,36 @@
     "\n",
     "for i in range(len(simulation)):        \n",
     "    axs[1,1].plot(dates[i],simulation[i].V,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
+    "    axs[1,1].plot(dates[i],simulation[i].V_need,linestyle='dashed',color=colors[i])\n",
     "axs[1,1].set_title('VMI Usage')\n",
     "axs[1,1].set_xlim(initdate,datetime(2020,12,31))\n",
     "axs[1,1].scatter(RM.sochimi_dates,RM.Vr)\n",
     "axs[1,1].plot(dates[0],simulation[0].V_cap,label='VMI Capacity', linestyle = 'dashed', color = 'grey')\n",
-    "axs[1,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "#axs[1,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[1,1].axvline(x = datetime(2020,8,22), linestyle = 'dotted',color = 'grey',label='Inicio Cuarentena')\n",
     "axs[1,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[1,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
     "axs[1,1].legend(loc=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(simulation[0].I)"
    ]
   },
   {
@@ -746,25 +733,6 @@
    "outputs": [],
    "source": [
     "SeroPrevalenceDet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig(1,1)\n",
-    "for i in range(len(simulation)):        \n",
-    "    axs[1,1].plot(dates[i],simulation[i].V,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
-    "axs[1,1].set_title('VMI Usage')\n",
-    "axs[1,1].set_xlim(initdate,datetime(2020,12,31))\n",
-    "axs[1,1].scatter(RM.sochimi_dates,RM.Vr)\n",
-    "axs[1,1].plot(dates[0],simulation[0].V_cap,label='VMI Capacity', linestyle = 'dashed', color = 'grey')\n",
-    "axs[1,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
-    "axs[1,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
-    "axs[1,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
-    "axs[1,1].legend(loc=0)"
    ]
   },
   {
